--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,19 @@ readme = "README.md"
 python = "^3.11"
 pandas = "^2.1.4"
 scikit-learn = "^1.6.0"
+matplotlib = "^3.10.0"
+pyqt5 = "^5.15.11"
+beautifulsoup4 = "^4.14.2"
+lxml = "^6.0.2"
+requests = "^2.32.5"
+openpyxl = "^3.1.5"
+odfpy = "^1.4.1"
+
 
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.14.1"
+jupyter = "^1.1.1"
 
 [build-system]
 requires = ["poetry-core"]
